Route marketing tasks into queue
